fix(inputs): textarea help_btn wrong size of focus outline

--- a/src/scss/shared/help.scss
+++ b/src/scss/shared/help.scss
@@ -7,8 +7,8 @@
     @include btn;
 
     margin-left: var(--help_btn_margin);
-    display: flex;
-    order: 1;
+    display: inline-block;
+    height: max-content;
 
     svg {
         display: block;
